%%{init: {"er": {"nodeSpacing": 20, "rankSpacing": 25, "entityPadding": 3, "minEntityWidth": 30}}}%%
erDiagram
    ingredients {
        bigint id PK
        varchar name
        enum unit
        decimal low_stock_threshold
        varchar batch_mode
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }
    ingredient_batches {
        bigint id PK
        bigint ingredient_id FK
        decimal quantity
        date expiry_date
        timestamp received_at
        decimal cost_per_unit
        integer custom_order
    }
    menu_ingredients {
        bigint id PK
        bigint menu_id FK
        bigint ingredient_id FK
        decimal quantity_used
    }
    stock_movements {
        bigint id PK
        bigint ingredient_id FK
        bigint ingredient_batch_id FK
        bigint order_id FK
        bigint order_item_id FK
        bigint stock_adjustment_id FK
        varchar movement_type
        varchar source_type
        varchar source_id
        decimal quantity_before
        decimal quantity_change
        decimal quantity_after
        decimal unit_cost
        varchar reference
        text notes
        bigint recorded_by FK
        timestamp created_at
    }
    stock_adjustments {
        bigint id PK
        varchar adjustable_type
        bigint ingredient_id FK
        bigint menu_id FK
        varchar adjustment_type
        varchar category
        decimal quantity
        decimal quantity_before
        decimal quantity_after
        text reason
        bigint reported_by FK
        timestamp adjusted_at
        timestamp created_at
        timestamp updated_at
    }
    daily_ingredient_usages {
        bigint id PK
        bigint ingredient_id FK
        varchar ingredient_name
        varchar unit
        decimal jumlah_digunakan
        date usage_date
        timestamp created_at
        timestamp updated_at
    }

    ingredients ||--o{ ingredient_batches : has
    ingredients ||--o{ menu_ingredients : "used in"
    ingredients ||--o{ stock_movements : "stock changes"
    ingredients ||--o{ stock_adjustments : "adjusted by"
    ingredients ||--o{ daily_ingredient_usages : "daily usage"
    ingredient_batches ||--o{ stock_movements : "batch changes"
    stock_adjustments ||--o{ stock_movements : "movement source"
